--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <button type="number" id="btnCalcular">Calcular Area</button>
 
     <script src="src/index.ts"></script>
+    <script src="src/descuento.ts"></script>
   </body>
 </html>
